# batch_public

./: .env.example  .gitignore  AGENT.md  LICENSE  README.md  RELEASE_CLEANUP_REPORT.md  pyproject.toml
batch/: __init__.py  agent_api.py  batch_config.json  batch_submitter.py  dynamo_fetcher.py  jsonl_formatter.py  logger.py  main.py  models.py  status_checker.py
batch/batch_parse/: README.md  __init__.py  parse.py
batch/templates/: README.md  __init__.py  news_table.py
